# Alchemix-ai

./: .gitignore  CNAME  README.md  app.yaml  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json
.vercel/: project.json
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/api/v1/endpoints/: auth.py  template.py  users.py  website.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: item.py  user.py
backend/app/schemas/: item.py  user.py  website.py
backend/app/services/: item.py  template_service.py  user.py
backend/scripts/: create_project.py
frontend/: .env  .env.local  .env.production  .gitignore  .gitignore copy  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIChatBubble.tsx  DrawingPad.tsx  ImageWithFallback.jsx  InteractiveImageGenerator.tsx  Template.jsx  YourComponent.jsx  YourComponent.tsx
frontend/src/types/: canvas.ts
frontend/src/utils/: api.ts  imageLoader.js
(+93 files in other folders)
